# ORBSlammer_LocalizationService

./: Agents.md  AppImageBuilder.yml  CMakeLists.txt  README.md  appimage_build.sh  build.sh
include/: LoopClosing.h  System.h  Tracking.h
localization_service/: example.yaml
localization_service/html/: index.html
localization_service/include/localization_service/: ingest_queue.h  web_server.h
localization_service/src/: ingest_queue.cc  localization_service_host.cc  web_server.cc
localization_service/tools/: send_camera_frames.py
src/: KeyFrameDatabase.cc  LoopClosing.cc  System.cc  Tracking.cc
